--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 	font-weight: bold;
 	font-size: 15px;
 }
-.custom_nav ul .active {
+.custom_nav ul .active a {
 	color: #dd2a24 !important;
 
 }
@@ -94,9 +94,7 @@ body {
 	font-family: HelveticaNeueBold;
 }
 
-.custom_btn:hover {
-	color: #000;
-}
+
 
 
 /*header menu end*/
@@ -267,37 +265,48 @@ body {
 
 .work_content {
 	position: relative;
+	overflow: hidden;
 }
 
 .work_content img {
+	display: block;
 	width: 100%;
+	height: auto;
 }
 
 .work_hover {
 	position: absolute;
-	top: 0;
+	bottom: 0;
 	left: 0;
-	text-align: center;
+	right: 0;
 	background-color: #f35e59;
-	padding-top: 30%;
-	opacity:0;
-	transition:0.9s;
 	width: 100%;
 	height: 100%;
+	-webkit-transform: scale(0);
+	-ms-transform: scale(0);
+	transform: scale(0);
+	-webkit-transition: .3s ease;
+	transition: .4s ease;
+	text-align: center;	  
 }
 
 .work_content:hover .work_hover {
-    opacity:1;
-    width: 100%;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 }
 
+.text {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 25%;
+}
 
-
-.work_hover i {
+.text i {
 	font-size: 36px;
 	color: #fff;
 }
-
 
 .text h1 {
 	font-size: 26px;
