--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ body {
 	color: #424242;
 	font-weight: bold;
 	font-size: 15px;
+	transition: .3s;
 }
 .custom_nav ul .active a {
 	color: #dd2a24 !important;
@@ -86,12 +87,17 @@ body {
 	margin-right: 0;
 }
 
-.custom_btn {
+.custom_nav ul li button {
 	background-color: #de2b24;
 	margin-right: 0;
 	font-size: 16px;
 	font-weight: bold;
 	font-family: HelveticaNeueBold;
+	transition: .3s;
+}
+
+.custom_nav ul li button:hover {
+	color: #fff;
 }
 
 
@@ -282,6 +288,7 @@ body {
 	background-color: #f35e59;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	-webkit-transform: scale(0);
 	-ms-transform: scale(0);
 	transform: scale(0);
