--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ body {
 	font-weight: bold;
 	font-family: HelveticaNeueBold;
 	transition: .3s;
+	padding: 10px 15px !important;
 }
 
 .custom_nav ul li button:hover {
