--- a/css/media.css
+++ b/css/media.css
@@ -4,8 +4,18 @@
 @media (max-width: 575.98px) {
 	/*header start*/
 	/*header top start*/
+	.top_content {
+	    margin-top: 15px;
+	    padding: 0 16px;
+	    text-align: center;
+	}
+
+	.top_content ul li {
+		margin-right: 2px !important;
+	}
+
 	.top_content ul li i {
-	    font-size: 18px;
+	    font-size: 16px;
 	}
 	/*header menu start*/
 	.custom_btn {
@@ -134,6 +144,9 @@
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
 	/*header start*/
+	.top_content {
+	    padding: 0;
+	}
 	/*header menu start*/
 	.custom_navbar {
 		padding-left: 0;
@@ -245,6 +258,10 @@
 	    padding: 10px 20px;
 	}
 
+	.form_title p {
+	    font-size: 16px;
+	}
+
 	.submit_btn button {
 	    margin-top: 5px;
 	}
@@ -278,6 +295,16 @@
 
 	.custom_nav ul li button {
 	    margin-top: 10px;
+	}
+
+	/*banner start*/
+	.banner {
+	    padding: 150px 0;
+	}
+
+	.banner_content a {
+	    font-size: 20px;
+	    padding: 15px 15px;
 	}
 
 	/*about us start*/
@@ -329,6 +356,14 @@
 	/*contact start*/
 	.contact {
 	    padding: 40px 0;
+	}
+
+	.contact_form {
+	    padding: 25px 22px;
+	}
+
+	.form_title p {
+	    font-size: 16px;
 	}
 	
 	/*newsletter start*/
