--- a/css/style.css
+++ b/css/style.css
@@ -347,12 +347,29 @@ body {
 	font-size: 30px;
 	line-height: 1.5;
 	cursor: pointer;
+	transition: .3s;
 }
 
 .contact_form {
 	background-color: #fff;
 	padding: 50px 50px;
 	position: relative;
+}
+
+.contact_form > button {
+	position: absolute;
+	top: -40px;
+	right: -35px;
+	width: 50px;
+	height: 50px;
+	border: 2px solid #fff;
+	color: #fff;
+	border-radius: 50%;
+	background-color: #de2b24;
+	border: 0 !important;
+	outline: 0 !important;
+	transition: .3s;
+
 }
 
 .form_title {
@@ -363,28 +380,21 @@ body {
 	font-size: 14px;
 }
 
-.form_title button {
-	position: absolute;
-	top: -20px;
-	right: -30px;
-	width: 50px;
-	height: 50px;
-	border: 2px solid #fff;
-	color: #fff;
-	border-radius: 50%;
-	background-color: #de2b24;
 
-}
 
 .form_field {
 
 }
 
-.submit_btn button {
+.submit_btn > button {
 	background-color: #de2b24;
 	color: #fff;
 	margin-top: 20px;
-	padding: ;
+	transition: .3s;
+}
+
+.submit_btn > button:hover {
+	background-color: #1287bf; 
 }
 /*contact end*/
 
