--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,20 @@ body {
 	position: relative;
 }
 
+.contact_form > .triangle-up {
+	width: 50px;
+	height: 0;
+	border-left: 35px solid transparent;
+	border-right: 35px solid transparent;
+	border-bottom: 50px solid #fff;
+	position: absolute;
+	top: -50px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	opacity: 1;
+}
+
 .contact_form > button {
 	position: absolute;
 	top: -40px;
@@ -366,10 +380,7 @@ body {
 	color: #fff;
 	border-radius: 50%;
 	background-color: #de2b24;
-	border: 0 !important;
-	outline: 0 !important;
 	transition: .3s;
-
 }
 
 .form_title {
@@ -387,6 +398,8 @@ body {
 }
 
 .submit_btn > button {
+	font-family: HelveticaNeueBold;
+	font-size: 15px;
 	background-color: #de2b24;
 	color: #fff;
 	margin-top: 20px;
