--- a/css/media.css
+++ b/css/media.css
@@ -5,8 +5,6 @@
 	/*header start*/
 	/*header top start*/
 	.top_content {
-	    margin-top: 15px;
-	    padding: 0 16px;
 	    text-align: center;
 	}
 
@@ -16,6 +14,14 @@
 
 	.top_content ul li i {
 	    font-size: 16px;
+	}
+
+	.mobile {
+	    padding: 8px !important;
+	}
+
+	.envelope {
+	    padding: 8px !important;
 	}
 	/*header menu start*/
 	.custom_btn {
