--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,11 @@ body {
 }
 
 .mobile {
-	padding: 8px !important;
+	padding: 8px;
 }
 
 .envelope {
-	padding: 8px !important;
+	padding: 8px;
 }
 
 .top_content ul li span {
