--- a/css/media.css
+++ b/css/media.css
@@ -18,11 +18,11 @@
 
 	
 	.mobile {
-		padding-right: 7px !important;
+		padding-left: 0 !important;
 	}
 	
 	.envelope {
-		padding-right: 7px !important;
+		padding-left: 0 !important;
 	}
 
 	/*header menu start*/
